# Coaching-Management-SaaS

backend/: db.sqlite3  pyproject.toml  requirements.txt
backend/accounts/: admin.py  emails.py  models.py  permissions.py  utils.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_delete_subscription.py  0003_rename_tenant_institute_and_more.py  0004_alter_institute_slug.py  0005_passwordresetotp.py  0006_passwordresetotp_expires_at_and_more.py  0007_remove_passwordresetotp_is_verified.py  0008_alter_passwordresetotp_expires_at.py
backend/attendance/: models.py  serializers.py  views.py
backend/attendance/migrations/: 0001_initial.py  0002_rename_tenant_attendance_institute.py
backend/backend/: authentication.py  mixins.py  settings.py  urls.py
backend/fees/: admin.py  models.py  serializers.py  views.py
backend/fees/migrations/: 0001_initial.py  0002_rename_tenant_fee_institute.py
backend/middleware/: auth.py
backend/permissions/: roles.py
backend/students/: models.py  serializers.py  views.py
backend/students/migrations/: 0001_initial.py  0002_rename_tenant_student_institute.py
backend/utils/: email.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css  storage.js
frontend/src/components/: Navbar.jsx  PrivateRoute.jsx
frontend/src/components/card/: UserCard.jsx
frontend/src/pages/: AddStudent.jsx  Attendance.jsx  AuthLayout.jsx  Dashboard.jsx  Fees.jsx  ForgotPassword.jsx  Login.jsx  Register.jsx  StudentProfile.jsx  Students.jsx  Subscribe.jsx  VerifyOTP.jsx
(+6 files in other folders)
