[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.11.1",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "dj-database-url==3.1.2",
    "django==5.2.14",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "gunicorn==26.0.0",
    "idna==3.16",
    "packaging==26.2",
    "psycopg2-binary==2.9.12",
    "pyjwt==2.13.0",
    "python-decouple==3.8",
    "razorpay==2.0.1",
    "requests==2.34.2",
    "rest-framework-simplejwt==0.0.2",
    "sqlparse==0.5.5",
    "tzdata==2026.2",
    "urllib3==2.7.0",
    "whitenoise==6.12.0",
]
